<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>yier.bubu.redis</groupId>
    <artifactId>yierdis-parent</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <description>Parent and aggregator for Yierdis modules.</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>25</maven.compiler.release>
        <netty.version>4.1.109.Final</netty.version>
        <junit.version>4.13.2</junit.version>
        <shade.version>3.6.0</shade.version>
        <picocli.version>4.7.6</picocli.version>
        <hdrhistogram.version>2.2.2</hdrhistogram.version>
    </properties>

    <modules>
        <module>yierdis-common/yierdis-common</module>
        <module>yierdis-networking/yierdis-networking-resp</module>
        <module>yierdis-server/yierdis-server-api</module>
        <module>yierdis-server/yierdis-server</module>
        <module>yierdis-command/yierdis-command</module>
        <module>yierdis-db/yierdis-db</module>
        <module>yierdis-cli</module>
        <module>yierdis-benchmark</module>
        <module>yierdis-tests</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.netty</groupId>
                <artifactId>netty-transport</artifactId>
                <version>${netty.version}</version>
            </dependency>
            <dependency>
                <groupId>io.netty</groupId>
                <artifactId>netty-handler</artifactId>
                <version>${netty.version}</version>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
            </dependency>
            <dependency>
                <groupId>info.picocli</groupId>
                <artifactId>picocli</artifactId>
                <version>${picocli.version}</version>
            </dependency>
            <dependency>
                <groupId>org.hdrhistogram</groupId>
                <artifactId>HdrHistogram</artifactId>
                <version>${hdrhistogram.version}</version>
            </dependency>

            <dependency>
                <groupId>yier.bubu.redis</groupId>
                <artifactId>yierdis-networking-resp</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>yier.bubu.redis</groupId>
                <artifactId>yierdis-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>yier.bubu.redis</groupId>
                <artifactId>yierdis-server-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>yier.bubu.redis</groupId>
                <artifactId>yierdis-db</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>yier.bubu.redis</groupId>
                <artifactId>yierdis-command</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>yier.bubu.redis</groupId>
                <artifactId>yierdis-server</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.3.1</version>
            </plugin>

        </plugins>
    </build>

</project>
